--- a/front-master/src/components/Login/Login.css
+++ b/front-master/src/components/Login/Login.css
@@ -1,3 +1,10 @@
+.extra-buttons {
+  display: flex;
+  justify-content: space-between;
+  height: var(--button-height);
+  gap: 10px;
+}
+
 .Login {
   display: flex;
   flex-direction: column;
@@ -5,18 +12,6 @@
   margin: 0;
   height: auto;
   box-sizing: border-box;
-}
-
-.login-header {
-  width: 100%;
-  background-color: #e0e5ef;
-  padding: 27px;
-  text-align: center;
-  margin-bottom: 40px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-
 }
 
 .login-container {
@@ -28,14 +23,26 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   background-color: #fff;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .login-form {
   font-size: 16px;
   margin-top: 30px;
   margin-bottom: 30px;
-  width: 380px;
-  ;
+  width: 90%;
+}
+
+.login-button {
+  display: flex;
+  flex-direction: center;
+  align-items: center;
+  margin: 40px 0px;
+  width: 310px;
+  text-align: center !important;
+  padding: 10px !important;
+  box-sizing: border-box !important;
 }
 
 .login-form label {
@@ -49,70 +56,6 @@
   margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
-
-.login-form button,
-.logout-button {
-  margin-top: 20px;
-  font-size: 16px;
-  cursor: pointer;
-  width: 105%;
-  padding: 10px;
-  background-color: #cad3e5;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-button:hover {
-  background-color: #8fa9d6;
-}
-.error-message {
-  color: red;
-  margin-top: 10px;
-}
-
-.extra-buttons {
-  display: flex;
-  align-items: center;
-  margin-right: 1em;
-}
-
-.extra-buttons a {
-  text-decoration: none;
-  color: black;
-  margin: 0 10px;
-}
-.text-button {
-  background: none;
-  border: none;
-  color: #a5bbe7;
-  text-decoration: underline;
-  cursor: pointer;
-  font-size: 14px;
-  margin: 5px;
-  padding: 5px;
-  
-}
-
-
-footer {
-  margin-top: auto;
-  padding: 20px;
-  background-color: #e0e5ef;
-  width: 100%;
-  text-align: center;
-  font-size: 14px;
-}
-
-.footer-links a {
-  color: #007bff;
-  text-decoration: none;
-  margin: 0 5px;
-}
-
-.footer-links a:hover {
-  text-decoration: underline;
 }
 
 .password-recovery h2 {
@@ -143,30 +86,30 @@ footer {
   border-radius: 5px;
 }
 
+/* 뒤로가기 버튼 스타일 */
 .password-recovery button {
-  margin-top: 20px;
-  font-size: 16px;
-  cursor: pointer;
-  width: 100%;
-  padding: 10px;
-  background-color: #cad3e5;
-  color: #fff;
+  color: var(--button-text-color);
+  padding: var(--default-padding);
+  border-radius: var(--button-border-radius);
   border: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+  cursor: pointer;
+  margin-top: 20px;
+  height: var(--button-height);
 }
 
-.login-form button:hover,
-.logout-button:hover {
-  background-color: #0056b3;
+.password-recovery .button-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 20px;
 }
 
-.password-recovery button:hover {
-  background-color: #0056b3;
-}
+.button-container {
+  display: flex !important;
+  justify-content: center;
+  gap: 10px !important;
+  margin-top: 20px !important;
+  width: 100%;
+  align-items: center !important;
 
-
-.password-recovery .error-message {
-  color: red;
-  margin-top: 10px;
 }
