--- a/front-master/src/components/MyPage/MyPage.css
+++ b/front-master/src/components/MyPage/MyPage.css
@@ -7,62 +7,30 @@
   height: auto;
   box-sizing: border-box;
   background-color: #f8f9fa;
-}
-
-.MyPage-header {
-  width: 100%;
-  background-color: #343a40; 
-  color: #fff; 
-  padding: 20px;
-  text-align: center;
-  margin-bottom: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 800px; 
-}
-
-.header-container h1 {
-  margin: 0;
-  font-size: 32px;
-
-}
-
-.header-container button {
-  background-color: #17a2b8;
-  color: white;
-  padding: 10px 20px; 
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-left: 20px; 
-  text-decoration: none;
-}
-
-button:hover {
-  background-color: #138496; 
+  flex: 1;
 }
 
 .MyPage form {
   width: 100%;
-  max-width: 800px; /* 최대 넓이 설정 */
+  max-width: 400px;
+  /* 최대 넓이 설정 */
   display: flex;
   flex-direction: column;
   align-items: center;
+  transform: translate(-60%, -50%);
+  /* 예시로 폼을 가운데로 이동 */
+  position: absolute;
+  /* 필요시 position 속성 추가 */
+  top: 50%;
+  /* 페이지 가운데로 이동 */
+  left: 50%;
+  /* 페이지 가운데로 이동 */
+  gap: 15px;
 }
 
 .MyPage .form-group {
-  width: 100%;
+  width: 120%;
+  height: 120%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -83,34 +51,23 @@ button:hover {
   border: 1px solid #ddd;
   border-radius: 4px;
 }
-.MyPage .form-group button {
-  padding: 10px 20px;
-  background-color: #cad3e5;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-.MyPage .form-group button:hover {
-  background-color: #8fa9d6;
+
+.text-on-light {
+  color: #000000;
 }
 
-footer {
-  margin-top: auto;
-  padding: 20px;
-  background-color: #e0e5ef;
-  width: 100%;
-  text-align: center;
-  font-size: 14px;
+.text-on-dark {
+  color: #FFFFFF;
 }
 
-.footer-links a {
-  color: #007bff;
-  text-decoration: none;
-  margin: 0 5px;
+
+.form-group {
+  min-height: 10%;
+  min-width: 110%;
 }
 
-.footer-links a:hover {
-  text-decoration: underline;
+.buttonny {
+  width: 100px;
+  height: 40px;
+
 }
