--- a/front-master/src/components/SignUp/SignUp.css
+++ b/front-master/src/components/SignUp/SignUp.css
@@ -3,25 +3,14 @@
   flex-direction: column;
   align-items: center;
   margin: 0;
-  min-height: 110%;
   height: auto;
-  box-sizing: border-box;
-}
-
-.signup-header {
-  width: 100%;
-  background-color: #e0e5ef;
-  padding: 27px;
-  text-align: center;
-  margin-bottom: 40px;
-  display: flex;
-  justify-content: flex-end;
+  box-sizing: border-box;  
 }
 
 .signup-progress {
   display: flex;
   justify-content: center;
-  margin: 20px 10px;
+  margin: 40px 10px;
 }
 
 .progress-step {
@@ -36,7 +25,7 @@
 }
 
 .progress-step.active {
-  background-color: #a5bbe7;
+  background-color: #e89e9e;
 }
 
 .signup-content {
@@ -55,7 +44,7 @@
   align-items: center;
 }
 
-.step{
+.step {
   margin-bottom: 20px;
   max-width: 70%;
   width: 100%;
@@ -107,36 +96,16 @@
   margin-right: 5px;
 }
 
-.SignUp button {
-  background-color: #a5bbe7;
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-top: 10px;
-  margin-right: 20px;
-}
-
-button:hover {
-  background-color: #8fa9d6;
-}
-
-.extra-buttons {
-  display: flex;
-  align-items: center;
-  margin-right: 1em;
-}
-
-.extra-buttons a {
-  text-decoration: none;
-  color: black;
-  margin: 0 10px;
-}
 
 .SignUp button [type="submit"] {
   width: 100%;
   margin-top: 20px;
+}
+
+.second-button {
+  display: flex;                
+  justify-content: space-between; /* 버튼들을 좌우로 벌리기 */
+  align-items: center;           /* 버튼들을 수직으로 가운데 정렬 */
+  gap: 10px;                     /* 버튼 사이에 10px의 간격 추가 */
+  margin-top: 40px;              /* 위쪽에 여백 추가 */
 }
