--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,9 +3,6 @@
   flex-direction: column;
   height: 100vh;
 }
-.cta-button{
-  width:180px;
-}
 
 .App-header {
   position: fixed;
@@ -13,6 +10,7 @@
   right: 0;
   width: 100%;
   background-color: #A32125;
+  color: white;
   padding: 1em;
   display: flex;
   justify-content: flex-end;
@@ -126,3 +124,8 @@
   margin: 0 10px;
 }
 
+footer {
+  text-align: center;
+  margin-top: 2em;
+  color: white;
+}
