--- a/front-master/src/components/MyPage/MyPage.css
+++ b/front-master/src/components/MyPage/MyPage.css
@@ -3,17 +3,17 @@
   flex-direction: column;
   align-items: center;
   margin: 0;
-  padding: 20px;
   height: auto;
-  box-sizing: border-box;
-  background-color: #f8f9fa;
-  flex: 1;
-}
+  box-sizing: border-box;}
 
 .MyPage form {
   width: 100%;
   max-width: 400px;
-  /* 최대 넓이 설정 */
+  padding: 40px;
+  border-radius: 10px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
